# Portal-PyEmulator

./: .gitignore  README.md  pyproject.toml
assets/figure_maps/: id.json  layout.json
assets/figures/1-ssa/1-air/: lightning_rod-A.sky  lightning_rod_B.sky  sonic_boom-A.sky  sonic_boom-B.sky  warnado-A.sky  warnado-B.sky  whirlwind-A.sky  whirlwind-B.sky
assets/figures/1-ssa/2-life/: camo-A.sky  camo-B.sky  stealth_elf-A.sky  stealth_elf-B.sky  stump_smash-A.sky  stump_smash-B.sky  zook-A.sky  zook-B.sky
assets/figures/1-ssa/3-undead/: chop_chop-A.sky  chop_chop-B.sky  cynder-A.sky  cynder-B.sky  ghost_roaster-A.sky  ghost_roaster-B.sky  hex-A.sky  hex-B.sky
assets/figures/1-ssa/4-earth/: bash-A.sky  bash-B.sky  dino_rang-A.sky  dino_rang-B.sky  prism_break-A.sky  prism_break-B.sky  terrafin-A.sky  terrafin-B.sky
assets/figures/1-ssa/5-fire/: eruptor-A.sky  eruptor-B.sky  flameslinger-A.sky  flameslinger-B.sky  ignitor-A.sky  ignitor-B.sky  sunburn-A.sky  sunburn-B.sky
assets/figures/1-ssa/6-water/: gill_grunt-A.sky  gill_grunt-B.sky  slam_bam-A.sky  slam_bam-B.sky  (+4 more)
src/portal_pyemulator/: helpers.py  main.py  portal_pyemulator.py
src/portal_pyemulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/portal_pyemulator/portal_emulation/: slot.py  slots_handler.py
src/portal_pyemulator/portal_io/: command_handler.py  command_type.py  music_handler.py  portal_io.py  read_handler.py
src/portal_pyemulator/storage/: data_exporter.py  export_folder.py
src/portal_pyemulator/ui/: window.py
tests/: test_bytes_to_str.py
(+123 files in other folders)
