[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "portal_pyemulator"
version = "0.1.0"
description = "Emulates Skylanders Trap Team's Traptanium Portal of Power as a man-in-the-middle style program (for RPCS3)."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
	{name = "Doglover1219"}
]

dependencies = [
	"pyusb~=1.3.1",
	"PySide6~=6.11.0"
]


[project.scripts]
portal-emulator = "portal_pyemulator.main:main"

[project.optional-dependencies]
dev = [
  "pytest"
]